force-app/main/default/objects/RevinPartRequest__c/RevinPartRequest__c.object-meta.xml
<CustomObject>
    <label>Revin Part Request</label>
    <nameField>
        <label>Revin Part Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revin Part Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>