force-app/main/default/objects/RevinPartRequest__c/fields/EstimatedCost__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCost__c</fullName>
    <label>Estimated Cost</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>