force-app/main/default/objects/RevinPartRequest__c/fields/RevinWorkOrder__c.field-meta.xml
<CustomField>
    <fullName>RevinWorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revin Work Order</label>
    <referenceTo>RevinWorkOrder__c</referenceTo>
    <relationshipLabel>Revin Part Requests</relationshipLabel>
    <relationshipName>RevinPartRequests</relationshipName>
    <type>Lookup</type>
</CustomField>