force-app/main/default/objects/RevinPartRequest__c/validationRules/Revin_Valid_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Revin_Valid_Cost</fullName>
    <active>true</active>
    <errorConditionFormula>EstimatedCost__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Approved__c</errorDisplayField>
    <errorMessage>Please enter a number more than 0.</errorMessage>
</ValidationRule>