force-app/main/default/objects/RevinPartRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HighPriority__c</columns>
    <columns>Approved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>