force-app/main/default/objects/RevinPartRequest__c/listViews/Custom_Revin_Part_Request_Listview.listView-meta.xml
<ListView>
    <fullName>Custom_Revin_Part_Request_Listview</fullName>
    <columns>NAME</columns>
    <columns>EstimatedCost__c</columns>
    <columns>HighPriority__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Custom Revin Part Request Listview</label>
</ListView>